--- a/djcrm/leads/templates/leads/lead_detail.html
+++ b/djcrm/leads/templates/leads/lead_detail.html
@@ -1,24 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Document</title>
-    <style>
-        .lead {
-        padding-top: 10px;
-        padding-bottom: 10px;
-        padding-left: 10px;
-        padding-right: 10px;
-        margin-top: 10px;
-        background-color: #f6f6f6;
-        width: 100%;
-        }
-    </style>
-</head>
-<body>
-<h2><a href ="/leads">  LEADS LIST</a></h2>
+{% extends "leads/base.html" %}
+{% block content %}
+<h2><a href ="{% url 'lead-list' %}">  LEADS LIST</a></h2>
     <h1>{{ lead.first_name}} {{ lead.last_name }} - Lead information </h1>
     <p> The agent responsible for this lead is: {{ lead.agent }} </p>
-
-</body>
-</html>
+    <a href="{% url 'lead-update' lead.pk %}">Update</a>
+    <a href="{% url 'lead-delete' lead.pk %}">Delete</a>
+{% endblock content %}
