--- a/djcrm/leads/templates/leads/lead_list.html
+++ b/djcrm/leads/templates/leads/lead_list.html
@@ -1,29 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Document</title>
-    <style>
-        .lead {
-        padding-top: 10px;
-        padding-bottom: 10px;
-        padding-left: 10px;
-        padding-right: 10px;
-        margin-top: 10px;
-        background-color: #f6f6f6;
-        width: 100%;
-        }
-    </style>
-</head>
-<body>
-    <a href="/leads/create">Create a New Lead</a>
+{% extends "leads/base.html" %}
+{% block content %}
+    <a href="{% url 'lead-create' %}">Create a New Lead</a>
     <h1>Here you can see all the Leads</h1>
     {% for lead in leads %}
         <div class="lead">
-            <a href="/leads/{{ lead.pk }}">{{ lead.first_name }} {{ lead.last_name }}</a>. Company: {{ lead.company }}
-
-
+            <a href="{% url 'lead-detail' lead.pk %}">{{ lead.first_name }} {{ lead.last_name }}</a>. Company: {{ lead.company }}
         </div>
     {% endfor %}
-</body>
-</html>
+{% endblock content %}
