--- a/djcrm/leads/templates/leads/lead_update.html
+++ b/djcrm/leads/templates/leads/lead_update.html
@@ -1,29 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Document</title>
-    <style>
-        .lead {
-        padding-top: 10px;
-        padding-bottom: 10px;
-        padding-left: 10px;
-        padding-right: 10px;
-        margin-top: 10px;
-        background-color: #f6f6f6;
-        width: 100%;
-        }
-    </style>
-</head>
-<body>
-    <h2><a href ="/leads">  LEADS LIST</a></h2>
+{% extends "leads/base.html" %}
+{% block content %}
+    <h2><a href ="{% url 'lead-detail' lead.pk %}">  LEADS LIST</a></h2>
     <h1>Update lead: {{ lead.first_name }} {{ lead.last_name }}</h1>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Submit</button>
     </form>
-
-
-</body>
-</html>
+{% endblock content %}
